# SineEngine

./: CMakeLists.txt  LICENSE  README.md
assets/tilemaps/: testmap.ldtk
examples/: README  README.md  SecondState.h  TemplateState.h  main.cpp
examples/Player/: player.h
examples/game/: CMakeLists.txt  CMakePresets.json
examples/game/assets/tilemaps/: map_0.ldtk
examples/game/include/: SecondState.h  TemplateState.h
examples/game/src/: main.cpp
examples/game/src/Player/: player.cpp
include/: sine.h
